Improved comment display and behavior: Now opens "Add comment" in an overlay, no longer insists on a Subject for every comment, and more readable layout. Also improved the error messages.
svn path=/plonetheme.sunburst/trunk/; revision=37464

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -1217,7 +1217,7 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
 }
 
 .commentBody {
-    padding: 0.5em 1em;
+    padding: 1em;
 	margin: 0.5em 0;
 	border-radius: 0.5em;
 	-webkit-border-radius: 0.5em;
